# Wiki.ProgrammingSeminar

./: .gitignore  README.md
OpenCV(C++)/01/: CMakeLists.txt
OpenCV(C++)/01/src/: imread.cpp  imshow.cpp  imwrite.cpp
